# cosmic-notebook

./: Cargo.toml  README.md  i18n.toml  projectplan.md  scope.md  structure.md
i18n/en/: cosmic_notebook.ftl
src/: app.rs  config.rs  error.rs  i18n.rs  icon_cache.rs  main.rs  menu.rs  message.rs
src/editor/: buffer.rs  clipboard.rs  cursor.rs  mod.rs  undo.rs  widget.rs
src/file_handler/: io.rs  mod.rs  recovery.rs  scanner.rs  watcher.rs
src/markdown/: export.rs  image.rs  mod.rs  preview.rs  syntax.rs
src/search/: find.rs  mod.rs
src/state/: app_state.rs  editor_state.rs  mod.rs  session_state.rs  sidebar_state.rs  tab_state.rs
src/ui/: find_bar.rs  main_window.rs  mod.rs  sidebar.rs  status_bar.rs  tab_bar.rs
src/utils/: mod.rs
