[package]
name = "cosmic-notebook"
version = "0.1.0"
edition = "2021"
authors = ["Cosmic Notebook Contributors"]
description = "A lightweight Markdown viewer/editor built with libCosmic for Fedora"
license = "GPL-3.0"
repository = "https://github.com/cosmic-notebook/cosmic-notebook"
readme = "README.md"
keywords = ["markdown", "editor", "cosmic", "fedora", "linux"]
categories = ["text-editors", "gui"]

[dependencies]
# libCosmic GUI framework
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "tokio",
    "winit",
    "wgpu",
    "a11y",
    "multi-window",
    "surface-message",
] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Text manipulation
ropey = "1.6"
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system watching
notify = "6.1"

# Clipboard
arboard = "3.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Future i18n support (commented out for Phase 1)
# i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
# i18n-embed-fl = "0.8"
# rust-embed = "8.2"
# once_cell = "1.19"

# Markdown parsing
pulldown-cmark = "0.9"

# Future features (optional)
# syntect = { version = "5.1", optional = true }

[features]
default = []
# code-highlight = ["syntect"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true
